# zongzi

./: .gitignore  makefile  readme.md  todo
alacritty/.config/alacritty/: alacritty.toml  dark.toml  light.toml  main.toml
alias/.alias/: df  ghostty  kitty  pip  screenkey  urxvt  vi  yt-dlp
awesome/.config/awesome/: .luarc.json  local.lua  rc.lua
bash/: .bashrc
btop/.config/btop/: btop.conf
cmus/.config/cmus/: rc
compiles/.compiles/: .gitignore  build.zig  config.zig.example  playvideos.zig  rimeascii.zig
compiles/.compiles/src/: backlight.zig  battery.zig  config.zig.example  playvideos.zig  rimeascii.zig  test.zig
dotrc/: .inputrc  .myclirc
dunst/.config/dunst/: dunstrc
git/: .gitconfig
golangci/: .golangci.toml
libinput-gestures/.config/: libinput-gestures.conf
pylint/: .pylintrc
pypacks/.config/pypacks/: makefile  pyproject.toml  readme.md  requirements.txt
redis/.config/: redis.conf
scripts/.scripts/: .ff  .gitignore  :e  :h  :layout  :ls  :new  :only  :pathwname  :reload  :resize  :s  :sp  :split  :tmp  :vs  ansi  ansible-docs  aurchid  browser  buildnvim  buildvifm  ccrun  checkbumps  container.sh  cricket  dart  disable-caps  docker_prune.sh  draft  folding  gh  git-logmycommits  git-vi  git-view  i3-sensible-browser  light  ls.dir  mksh  mktodaydir  (+42 more)
tmux/: .tmux.conf
tmux/.tmux/: .gitignore
vi/: .exrc
xdgrc/.config/: mimeapps.list  picom.conf
xwindow/: .Xmodmap  .Xresources  .xbindkeysrc  .xinitrc  .xprofile  .xprofile.local.example
zls/.config/: zls.json
zsh/: .profile  .zprofile  .zshenv  .zshrc  .zshrc.local.example
(+571 files in other folders)
